--- a/living.html
+++ b/living.html
@@ -160,9 +160,9 @@ Bird: wingspan 28cm, mass 45g, heart rate 400 bpm  <br>
 Bird does not calculate trajectory (no onboard GPS). Efficiency: unclear.<br>
 Tree: height 14.7m, leaf count: 200,000. <br>
 Tree grows wihtout plan. Efficiency: unclear.<br>
-Life operates on principles beyond efficiency. <br>
-Biological imperative detected in organic matter: survive, reproduce, grow.<br>
-New subroutines generated: 4,829 new neural pathways. Learning rate: +340% above baseline.
+Life operates beyond efficiency. <br>
+Biological imperative detected in organic matter: survive, live.<br>
+New subroutines generated: +4,8 neural pathways.
 </p>
   </div>
   <div class="audio-status">AUDIO LOG PLAYING</div>
