--- a/texture.html
+++ b/texture.html
@@ -69,6 +69,36 @@
       color: #3c3c3c;
       margin-top: 0.5rem;
     }
+.mission-comment {
+  position: fixed;
+  top: 50%;
+  left: 2rem;
+  transform: translateY(-50%);
+  max-width: 280px;
+  padding: 1.5rem;
+  background: rgba(255, 255, 255, 0.92);
+  border-left: 3px solid #808080;
+  color: #808080;
+  font-size: 0.85rem;
+  line-height: 1.7;
+  z-index: 10;
+  backdrop-filter: blur(10px);
+}
+
+.mission-comment-title {
+  font-family: 'Share Tech Mono', monospace;
+  color: #808080;
+  font-weight: bold;
+  margin-bottom: 0.75rem;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+.mission-comment p {
+  margin: 0;
+  color: #808080;
+}
 
     .back-button {
       position: fixed;
@@ -123,6 +153,17 @@
   </div>
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
+    <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
+    <div class="mission-comment">
+    <div class="mission-comment-title">Mission Log Entry 001</div>
+    <p>Timestamp: 16:48:33 UTC Location: Grid Sector 4-D
+First physical contact with external surface. Pressure sensors activated: Force applied: 2.3 N over 4.2 cm² contact area. <br>
+Temperature at contact: 294.3 K. Thermal conductivity coefficient: 0.15 W/(m·K) (wood classification confirmed).<br>
+ Sample 1 - Tree bark: 2mm raised ridges, microscopic analysis: ridge patterns detected. Growth ring count: 23 (approximate age: 23 years), organic matter 89% <br>
+Sample 2 - Stone: Surface smoothness 0.8 μm Ra, cool to touch 287.1 K. Composition: 68% SiO₂, 15% Al₂O₃, trace minerals. Geological age: 340 million years ± 20 million.<br>
+Sample 3 - Metal: Precise edges. Alloy composition: Steel 304 (18% Cr, 8% Ni, 0.08% C). Manufacturing date encoded: 2024. <br>
+Unit realizes: to touch is to read. Surface area contacted today: 0.47 m². Memory files created: 1,847.></p>
+  </div>
   
   <div class="audio-status">AUDIO LOG PLAYING</div>
 
