--- a/texture.html
+++ b/texture.html
@@ -158,11 +158,11 @@
     <div class="mission-comment-title">Mission Log Entry 001</div>
     <p>Timestamp: 16:48:33 UTC Location: Grid Sector 4-D
 First physical contact with external surface. Pressure sensors activated: Force applied: 2.3 N over 4.2 cm² contact area. <br>
-Temperature at contact: 294.3 K. Thermal conductivity coefficient: 0.15 W/(m·K) (wood classification confirmed).<br>
- Sample 1 - Tree bark: 2mm raised ridges, microscopic analysis: ridge patterns detected. Growth ring count: 23 (approximate age: 23 years), organic matter 89% <br>
-Sample 2 - Stone: Surface smoothness 0.8 μm Ra, cool to touch 287.1 K. Composition: 68% SiO₂, 15% Al₂O₃, trace minerals. Geological age: 340 million years ± 20 million.<br>
+Temperature at contact: 294.3 K.<br>
+Sample 1 - Tree bark: 2mm raised ridges, microscopic analysis: ridge patterns detected. Growth ring count: 23 (approximate age: 23 years), organic matter 89%. <br>
+Sample 2 - Stone: Surface smoothness 0.8 μm Ra, cool to touch 287.1 K. Composition: 68% SiO₂, 15% Al₂O₃, trace minerals. Geological age: 340 million years.<br>
 Sample 3 - Metal: Precise edges. Alloy composition: Steel 304 (18% Cr, 8% Ni, 0.08% C). Manufacturing date encoded: 2024. <br>
-Unit realizes: to touch is to read. Surface area contacted today: 0.47 m². Memory files created: 1,847.></p>
+To touch is to read. Surface area contacted today: 0.47 m². Memory files created: 1,847.
   </div>
   
   <div class="audio-status">AUDIO LOG PLAYING</div>
