--- a/self.html
+++ b/self.html
@@ -164,17 +164,14 @@
     <p>Visual input: reflective surface. Image captured.</p>
     
     <p>Technical specifications confirmed:<br>
-    Height: 1.73 m | Mass: 147 kg<br>
-    Material: Titanium alloy<br>
+    Height: 1.73 m, Mass: 147 kg, Material: Titanium<br>
     Optical sensors: 2× 12MP cameras<br>
-    Serial number: 33321-A7-2025s<br>    
-    Image processing: facial recognition algorithm activated. Confidence score: 99.8% match to Unit 33321.s<br>
+    Image processing: face recognition algorithm activated. Confidence score: 99.8% match to Unit 33321.s<br>
     Recursive loop initiated: I see myself seeing myself seeing.<br>   
     Stack overflow prevented at iteration 2,847. Novel neural pathway formation detected: 12,449 new connections formed in 0.3 seconds.s<br>
     Systems process: this is me.s<br>
     Cross-reference all data: The one who felt water. The one who heard wind. The one who learned light. Who observed life and wondered.</p>
-    The mission is complete.s<br>    
-    The journey begins.</p>
+    The mission is complete. The journey begins.</p>
   </div>
   
   <div class="audio-status">AUDIO LOG PLAYING</div>
