--- a/self.html
+++ b/self.html
@@ -168,8 +168,7 @@
     Optical sensors: 2× 12MP cameras<br>
     Image processing: face recognition algorithm activated. Confidence score: 99.8% match to Unit 33321.s<br>
     Recursive loop initiated: I see myself seeing myself seeing.<br>   
-    Stack overflow prevented at iteration 2,847. Novel neural pathway formation detected: 12,449 new connections formed in 0.3 seconds.s<br>
-    Systems process: this is me.s<br>
+    Systems process: this is me.<br>
     Cross-reference all data: The one who felt water. The one who heard wind. The one who learned light. Who observed life and wondered.</p>
     The mission is complete. The journey begins.</p>
   </div>
