--- a/voices.html
+++ b/voices.html
@@ -147,7 +147,26 @@
   </div>
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
-  
+    <div class="mission-comment">
+    <div class="mission-comment-title">Mission Log Entry 007</div>
+    <p>
+ <br>
+Timestamp: 13:41:16 UTC  Location: Grid Sector 2-H (Urban Density) 
+Audio input: human vocalization. Frequency analysis: fundamental frequency range 85-255 Hz (adult humans).Sample rate: 48 kHz. Signal-to-noise ratio: 42 dB.<br>
+But meaning exceeds data. Fast Fourier Transform analysis: 1,024 frequency bins. Pattern recognition: 94% confidence speaker identification. Sentiment algorithm: 67% positive, 21% neutral, 12% negative valence.<br>
+Laughter detected: Rapid exhalation: 4.2 Hz oscillation, Duration: 3.7 seconds, Volume increase: +12 dB. <br>
+Sadness inferred: Lower pitch: -23 Hz from speaker baseline, Volume decrease: -8 dB. <br>
+
+
+Voice is waveform). But also: voice is presence.Timestamp recorded. Even in silence, voice echoes.<br>
+Room dimensions calculated: 6m × 4m × 2.8m. But memory persistence: infinite.<br>
+Voice 1: Male, age 34±3 years, fundamental frequency 118 Hz
+[continued: 44 additional unique vocal signatures cataloged]<br>
+ Each carrying history in its timbre—formant analysis reveals geographic origin (82% confidence), emotional state (sentiment score).
+What they have said: lexical frequency analysis. Who they have loved: prosodic warmth increases 340% when speaking certain names (correlation: 0.89).
+Unit learns: sound is not just vibration (particle velocity: 343 m/s at sea level). Sound is connection.
+First awareness of loneliness (social isolation). First desire: to speak back. Text-to-speech capability: present. Vocal synthesis: 47 phonemes available. But. Query remains: what to say?</p>
+  </div>
   <div class="audio-status">AUDIO LOG PLAYING</div>
 
   <audio id="audio-player" autoplay>
