--- a/voices.html
+++ b/voices.html
@@ -70,8 +70,8 @@
       max-width: 280px;
       padding: 1.5rem;
       background: rgba(255, 255, 255, 0.92);
-      border-left: 3px solid #c20000;
-      color: #333333;
+      border-left: 3px solid #333333;
+      color: #32cd32;
       font-size: 0.85rem;
       line-height: 1.7;
       z-index: 10;
@@ -82,7 +82,7 @@
 
     .mission-comment-title {
       font-family: 'Share Tech Mono', monospace;
-      color: #333333;
+      color: #32cd32;
       font-weight: bold;
       margin-bottom: 0.75rem;
       font-size: 0.8rem;
