--- a/voices.html
+++ b/voices.html
@@ -59,7 +59,7 @@
 
     .Memory-subtitle {
       font-size: 1rem;
-      color: #32cd32; /* Lime Green Subtitle */
+      color: #333333; /* Lime Green Subtitle */
       margin-top: 0.5rem;
     }
     .mission-comment {
@@ -70,8 +70,8 @@
       max-width: 280px;
       padding: 1.5rem;
       background: rgba(255, 255, 255, 0.92);
-      border-left: 3px solid #333333;
-      color: #32cd32;
+      border-left: 3px solid #32cd32;
+      color: #333333
       font-size: 0.85rem;
       line-height: 1.7;
       z-index: 10;
