--- a/voices.html
+++ b/voices.html
@@ -70,7 +70,7 @@
       max-width: 280px;
       padding: 1.5rem;
       background: rgba(255, 255, 255, 0.92);
-      border-left: 3px solid #32cd32;
+      border-left: 3px solid #333333;
       color: #333333
       font-size: 0.85rem;
       line-height: 1.7;
@@ -82,7 +82,7 @@
 
     .mission-comment-title {
       font-family: 'Share Tech Mono', monospace;
-      color: #32cd32;
+      color: #333333;
       font-weight: bold;
       margin-bottom: 0.75rem;
       font-size: 0.8rem;
@@ -92,7 +92,7 @@
 
     .mission-comment p {
       margin: 0 0 0.5rem 0;
-      color: #32cd32;
+      color: #333333;
     }
     .back-button {
       position: fixed;
