--- a/voices.html
+++ b/voices.html
@@ -148,7 +148,7 @@
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
     <div class="mission-comment">
-    <div class="mission-comment-title">Mission Log Entry 007</div>
+    <div class="mission-comment-title"></div>
     <p>
  <br>
 Timestamp: 13:41:16 UTC  Location: Grid Sector 2-H (Urban Density) 
