--- a/water.html
+++ b/water.html
@@ -163,7 +163,7 @@
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
 
   <div class="mission-comment">
-    <div class="mission-comment-title">Mission Log Entry 001</div>
+    <div class="mission-comment-title"></div>
     <p>Timestamp: 08:34:12 UTC  Location: Grid Sector 7-A First contact with aqueous substance. <br><br> 
       Sensors detect molecular structure H₂O. pH level: 7.1 (neutral). <br><br> 
       Behavior: fluid, unpredictable, non-Newtonian flow patterns observed.<br><br>
