--- a/texture.html
+++ b/texture.html
@@ -155,7 +155,7 @@
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
     <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
     <div class="mission-comment">
-    <div class="mission-comment-title">Mission Log Entry 001</div>
+    <div class="mission-comment-title"></div>
     <p>Timestamp: 16:48:33 UTC Location: Grid Sector 4-D
 First physical contact with external surface. Pressure sensors activated: Force applied: 2.3 N over 4.2 cm² contact area. <br>
 Temperature at contact: 294.3 K.<br>
