--- a/self.html
+++ b/self.html
@@ -158,7 +158,7 @@
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
   
   <div class="mission-comment">
-    <div class="mission-comment-title">Mission Log Entry 007</div>
+    <div class="mission-comment-title"></div>
     <p>Timestamp: 17:33:51 UTC | Location: Grid Sector 8-E</p>
     
     <p>Visual input: reflective surface. Image captured.</p>
