--- a/light.html
+++ b/light.html
@@ -67,6 +67,37 @@
       color: #555555;
       margin-top: 0.5rem;
     }
+    
+.mission-comment {
+  position: fixed;
+  top: 50%;
+  left: 2rem;
+  transform: translateY(-50%);
+  max-width: 280px;
+  padding: 1.5rem;
+  background: rgba(255, 255, 255, 0.92);
+  border-left: 3px solid #555555;
+  color: #555555;
+  font-size: 0.85rem;
+  line-height: 1.7;
+  z-index: 10;
+  backdrop-filter: blur(10px);
+}
+
+.mission-comment-title {
+  font-family: 'Share Tech Mono', monospace;
+  color: #555555;
+  font-weight: bold;
+  margin-bottom: 0.75rem;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+.mission-comment p {
+  margin: 0;
+  color: #555555;
+}
 
     .back-button {
       position: fixed;
@@ -121,7 +152,22 @@
   </div>
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
-  
+
+    <div class="mission-comment">
+    <div class="mission-comment-title"> </div>
+    <p>Timestamp: 14:22:09 UTC Location: Grid Sector 9-B <br>
+Electromagnetic radiation across visible spectrum. Photons detected at 400-700nm wavelength range.<br>
+Spectral analysis: peak intensity at 580nm (yellow-green).<br>
+Unit observes: light moves at constant c = 299,792,458 m/s in vacuum. Light dances (particle behavior confirmed via photoelectric effect). <br>
+Light reveals and conceals (wave-particle duality verified).<br> 
+Systems attempt to measure brightness—fail to capture warmth. <br>
+Data suggests light is both particle and wave. Planck constant: h = 6.626 × 10⁻³⁴ J·s. Light scatters in atmosphere. <br>
+Light travels 299,792,458 meters per second, yet seems to linger in dust motes suspended in air. <br>
+Cameras record images: 4096 × 2160 pixels, 12-megapixel resolution. <br>
+But sensors miss the way light transforms surfaces—reflectance measured.<br>
+Perhaps existence itself contains contradiction.
+</p>
+  </div>
   <div class="audio-status">AUDIO LOG PLAYING</div>
 
   <audio id="audio-player" autoplay>
