--- a/light.html
+++ b/light.html
@@ -158,13 +158,12 @@
     <p>Timestamp: 14:22:09 UTC Location: Grid Sector 9-B <br>
 Electromagnetic radiation across visible spectrum. Photons detected at 400-700nm wavelength range.<br>
 Spectral analysis: peak intensity at 580nm (yellow-green).<br>
-Unit observes: light moves at constant c = 299,792,458 m/s in vacuum. Light dances (particle behavior confirmed via photoelectric effect). <br>
-Light reveals and conceals (wave-particle duality verified).<br> 
+Unit observes: light moves at constant c = 299,792,458 m/s in vacuum. <br>
+Light reveals and conceals (wave-particle duality verified).Planck constant: h = 6.626 × 10⁻³⁴ J·s <br> 
 Systems attempt to measure brightness—fail to capture warmth. <br>
-Data suggests light is both particle and wave. Planck constant: h = 6.626 × 10⁻³⁴ J·s. Light scatters in atmosphere. <br>
-Light travels 299,792,458 meters per second, yet seems to linger in dust motes suspended in air. <br>
+Light scatters in atmosphere. Light travels 299,792,458 m/s, yet seems to linger in dust motes suspended in air. <br>
 Cameras record images: 4096 × 2160 pixels, 12-megapixel resolution. <br>
-But sensors miss the way light transforms surfaces—reflectance measured.<br>
+Sensors miss the way light transforms surfaces.<br>
 Perhaps existence itself contains contradiction.
 </p>
   </div>
