--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="map-container">
 
     <!-- CHANGE src IF YOUR FILE HAS A DIFFERENT NAME -->
-    <img src="images/your-map.png" alt="Digital poetry sound map" />
+    <img src="images/Untitled Diagram.drawio(7).png" alt="Digital poetry sound map" />
 
     <!-- 7 HOTSPOTS ALONG THE PATH – each links to its own page -->
     <button
@@ -202,4 +202,5 @@
   </script>
 </body>
 </html>
+
 
